WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
93656
[chromium] Fix the colors in the debugging HUD
https://bugs.webkit.org/show_bug.cgi?id=93656
Summary
[chromium] Fix the colors in the debugging HUD
Dana Jansens
Reported
2012-08-09 14:23:07 PDT
[chromium] Fix the colors in the debugging HUD
Attachments
Patch
(8.84 KB, patch)
2012-08-09 14:24 PDT
,
Dana Jansens
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dana Jansens
Comment 1
2012-08-09 14:24:55 PDT
Created
attachment 157548
[details]
Patch
Adrienne Walker
Comment 2
2012-08-09 15:03:37 PDT
Comment on
attachment 157548
[details]
Patch R=me.
WebKit Review Bot
Comment 3
2012-08-10 08:37:02 PDT
Comment on
attachment 157548
[details]
Patch Clearing flags on attachment: 157548 Committed
r125283
: <
http://trac.webkit.org/changeset/125283
>
WebKit Review Bot
Comment 4
2012-08-10 08:37:06 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug